--- a/main.css
+++ b/main.css
@@ -67,6 +67,7 @@ input {
   padding-bottom: 35px;
   padding-top: 15px;
   min-width: 550px;
+  outline: none;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 input[value] {
@@ -103,6 +104,7 @@ header .top-header {
 header .top-header span {
   color: #107eff;
   font-weight: 400;
+  transition: all 0.5s ease-in-out;
 }
 header .top-header:hover {
   color: #107eff;
@@ -301,10 +303,14 @@ header ul li:not(:last-child) {
 }
 #tell-us .bottom-section :nth-child(n) {
   width: 50%;
-  margin-bottom: 100px;
 }
 #tell-us .bottom-section :nth-child(4) {
   align-self: flex-start;
+  margin-top: 100px;
+}
+#tell-us .bottom-section form {
+  margin-top: 100px;
+  margin-bottom: 175px;
 }
 #tell-us .bottom-section h3,
 #tell-us .bottom-section .title {
@@ -321,12 +327,114 @@ header ul li:not(:last-child) {
   color: rgba(255, 255, 255, 0.5);
   width: 100%;
 }
+#tell-us .budget-scroll {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+#tell-us .budget-scroll :nth-child(n) {
+  width: 50%;
+}
+#tell-us .budget-scroll .range {
+  min-width: auto;
+  min-width: 70%;
+}
+#tell-us .budget-scroll .price {
+  padding-left: 50px;
+  min-width: 100%;
+}
+#tell-us .budget-scroll .price span,
+#tell-us .budget-scroll .price output {
+  font-size: 1.5rem;
+}
+#tell-us .btn-send {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  padding: 45px 165px;
+  background: rgba(255, 255, 255, 0.062745098);
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 3;
+  transition: all 0.5s ease-in-out;
+  margin-bottom: 140px;
+  cursor: pointer;
+}
+#tell-us .btn-send:hover {
+  background: rgba(255, 255, 255, 0.3137254902);
+}
+#tell-us .btn-send:active {
+  background: rgba(255, 255, 255, 0.062745098);
+}
 
 #contact {
   padding-top: 160px;
 }
 #contact .top-section {
   margin-bottom: 130px;
+}
+#contact .top-section h5 {
+  letter-spacing: 1.5;
+}
+#contact .contacts {
+  display: flex;
+  margin-left: 280px;
+  margin-bottom: 150px;
+  flex-wrap: wrap;
+}
+#contact .contacts .main {
+  width: 50%;
+}
+#contact .contacts .address-text {
+  line-height: 1.5;
+}
+#contact .contacts .soc {
+  margin-top: 100px;
+}
+#contact .contacts .soc .text {
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 1.5rem;
+  margin-bottom: 40px;
+}
+#contact .contacts .soc .icon {
+  display: flex;
+}
+#contact .contacts .soc .icon img {
+  margin-right: 30px;
+  transition: all 0.5s ease-in-out;
+}
+#contact .contacts .soc .icon img:hover {
+  scale: 1.3;
+}
+#contact .contacts .soc .icon img:active {
+  scale: 1.1;
+}
+#contact .contacts h5 {
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding-bottom: 15px;
+  text-transform: uppercase;
+}
+
+footer {
+  border: none;
+  margin-bottom: 80px;
+}
+footer .copy {
+  display: flex;
+  text-transform: uppercase;
+}
+footer .logo, footer .copyright {
+  margin-right: 15px;
+  font-size: 1.2rem;
+}
+footer ul {
+  display: flex;
+  margin-top: 15px;
+}
+footer ul li {
+  margin-right: 40px;
 }
 
 .top-section {
