--- a/main.scss
+++ b/main.scss
@@ -76,6 +76,7 @@ input {
   padding-bottom: 35px;
   padding-top: 15px;
   min-width: 550px;
+  outline: none;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   &[value] {
     font-weight: 700;
@@ -109,6 +110,7 @@ header {
     span {
       color: #107eff;
       font-weight: 400;
+      transition: $trans;
     }
     transition: $trans;
     &:hover {
@@ -314,10 +316,14 @@ header {
     align-items: flex-end;
     :nth-child(n) {
       width: 50%;
-      margin-bottom: 100px;
     }
     :nth-child(4) {
       align-self: flex-start;
+      margin-top: 100px;
+    }
+    form {
+      margin-top: 100px;
+      margin-bottom: 175px;
     }
     h3,
     .title {
@@ -335,12 +341,111 @@ header {
       width: 100%;
     }
   }
+  .budget-scroll {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    :nth-child(n) {
+      width: 50%;
+    }
+    .range {
+      min-width: auto;
+      min-width: 70%;
+    }
+    .price {
+      padding-left: 50px;
+      min-width: 100%;
+      span,
+      output {
+        font-size: 1.5rem;
+      }
+    }
+  }
+  .btn-send {
+    max-width: max-content;
+    padding: 45px 165px;
+    background: #ffffff10;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 3;
+    transition: $trans;
+    margin-bottom: 140px;
+    cursor: pointer;
+    &:hover {
+      background: #ffffff50;
+    }
+    &:active {
+      background: #ffffff10;
+    }
+  }
 }
 
 #contact {
   padding-top: 160px;
   .top-section {
     margin-bottom: 130px;
+    h5 {
+      letter-spacing: 1.5;
+    }
+  }
+  .contacts {
+    display: flex;
+    margin-left: 280px;
+    margin-bottom: 150px;
+    flex-wrap: wrap;
+    .main {
+      width: 50%;
+    }
+    .address-text {
+      line-height: 1.5;
+    }
+    .soc {
+      margin-top: 100px;
+      .text {
+        font-family: $fontNova;
+        font-size: 1.5rem;
+        margin-bottom: 40px;
+      }
+      .icon {
+        display: flex;
+        // align-items: center;
+        img {
+          margin-right: 30px;
+          transition: $trans;
+          &:hover {
+            scale: 1.3;
+          }
+          &:active {
+            scale: 1.1
+          }
+        }
+      }
+    }
+    h5 {
+      font-weight: 600;
+      font-size: 1.5rem;
+      padding-bottom: 15px;
+      text-transform: uppercase;
+    }
+  }
+}
+
+footer{
+  border: none;
+  margin-bottom: 80px;
+  .copy{
+    display: flex;
+    text-transform: uppercase;
+  }
+  .logo, .copyright{margin-right: 15px;
+    font-size: 1.2rem;}
+  ul{
+    display: flex;
+    margin-top: 15px;
+    li{
+      margin-right: 40px;
+    }
   }
 }
 
@@ -373,6 +478,3 @@ header {
   margin: 0;
   padding: 0;
 }
-
-
-
