--- a/main.scss
+++ b/main.scss
@@ -187,10 +187,18 @@ header {
 }
 
 #accordion {
-  height: auto;
+  position: relative;
+  height: 360px;
   padding: 0;
+  transition: $trans;
   .accordion {
     position: absolute;
+    transition: $trans;
+    left: 0;
+    .left {
+      left: -200px;
+      transition: $trans;
+    }
   }
   ul {
     display: flex;
@@ -229,14 +237,18 @@ header {
   h5 {
     padding-left: 85px;
     margin-top: 40px;
-    max-height: 0;
+    opacity: 1;
+    transition: all 0.5s cubic-bezier(0, 0, 1, -0.32);
+  }
+  .hide {
     overflow: hidden;
+    max-height: 0;
+    opacity: 0;
   }
 }
 
 #about-us {
   padding-top: 130px;
-  margin-top: 360px;
   margin-bottom: 130px;
   .photoes {
     display: flex;
@@ -271,14 +283,17 @@ header {
 
 #projects {
   padding-top: 150px;
+  transition: $trans;
   .top-section {
     margin-bottom: 140px;
   }
   .slider {
-    // overflow-x: hidden;
+    position: relative;
+    overflow-x: hidden;
     .slide-zone {
       display: flex;
-      margin-left: -1190px;
+      margin-left: -1212px;
+      transition: $trans;
     }
     .slide {
       margin-right: 125px;
@@ -300,6 +315,39 @@ header {
       color: #7e7e7e;
       letter-spacing: 0;
       width: 73%;
+    }
+  }
+  .arrows {
+    position: absolute;
+    z-index: 10;
+    top: 15%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .left {
+      transform: rotate(180deg);
+    }
+    .left,
+    .right {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 300px;
+      width: 50px;
+      background: none;
+      border: none;
+      &:hover {
+        background-color: #73b4ff30;
+        filter: blur(1px);
+        border-radius: 5px;
+      }
+      &:active {
+        background-color: #ffc81030;
+      }
+    }
+    .none {
+      visibility: hidden;
     }
   }
 }
@@ -417,7 +465,7 @@ header {
             scale: 1.3;
           }
           &:active {
-            scale: 1.1
+            scale: 1.1;
           }
         }
       }
@@ -431,19 +479,22 @@ header {
   }
 }
 
-footer{
+footer {
   border: none;
   margin-bottom: 80px;
-  .copy{
+  .copy {
     display: flex;
     text-transform: uppercase;
   }
-  .logo, .copyright{margin-right: 15px;
-    font-size: 1.2rem;}
-  ul{
+  .logo,
+  .copyright {
+    margin-right: 15px;
+    font-size: 1.2rem;
+  }
+  ul {
     display: flex;
     margin-top: 15px;
-    li{
+    li {
       margin-right: 40px;
     }
   }
@@ -477,4 +528,10 @@ footer{
 .range {
   margin: 0;
   padding: 0;
+}
+
+@keyframes left {
+  0% {
+    left: 0;
+  }
 }
