--- a/main.css
+++ b/main.css
@@ -1,4 +1,9 @@
 @import url("./css/input-range.css");
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -60,6 +65,10 @@ h5 {
   letter-spacing: 2.4;
 }
 
+button {
+  background: none;
+}
+
 input {
   background: none;
   border: none;
@@ -88,10 +97,7 @@ section {
   margin-left: 280px;
 }
 
-header {
-  margin-top: 20px;
-}
-header .top-header {
+.top-header {
   text-align: end;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
@@ -101,23 +107,27 @@ header .top-header {
   border-bottom: 1px solid #707070;
   transition: all 0.5s ease-in-out;
 }
-header .top-header span {
+.top-header span {
   color: #107eff;
   font-weight: 400;
   transition: all 0.5s ease-in-out;
 }
-header .top-header:hover {
+.top-header:hover {
   color: #107eff;
 }
-header .top-header:hover span {
+.top-header:hover span {
   color: #ffc810;
 }
-header .top-header:active {
+.top-header:active {
   padding-right: 60px;
   color: #ffc810;
 }
-header .top-header:active span {
+.top-header:active span {
   color: #107eff;
+}
+
+header {
+  margin-top: 20px;
 }
 header .hero {
   margin-top: 80px;
@@ -150,6 +160,40 @@ header ul {
   display: flex;
 }
 header ul li:not(:last-child) {
+  margin-right: 80px;
+}
+
+#fix-menu {
+  position: fixed;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  background-color: #000000;
+  border-bottom: 1px solid #242424;
+  z-index: 1;
+}
+#fix-menu .top-header {
+  border: none;
+}
+#fix-menu .menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 105px;
+  padding-right: 100px;
+}
+#fix-menu .menu .logo-block {
+  display: flex;
+  align-items: center;
+}
+#fix-menu .menu .logo-block .logo {
+  padding-right: 30px;
+}
+#fix-menu .menu ul {
+  display: flex;
+  margin-right: 20px;
+}
+#fix-menu .menu ul li {
   margin-right: 80px;
 }
 
@@ -203,7 +247,6 @@ header ul li:not(:last-child) {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  background: none;
   color: #a0a0a0;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
@@ -325,8 +368,8 @@ header ul li:not(:last-child) {
   align-items: center;
   height: 300px;
   width: 50px;
-  background: none;
   border: none;
+  transition: all 0.5s ease-in-out;
 }
 #projects .arrows .left:hover,
 #projects .arrows .right:hover {
@@ -390,8 +433,9 @@ header ul li:not(:last-child) {
   width: 50%;
 }
 #tell-us .budget-scroll .range {
-  min-width: auto;
   min-width: 70%;
+  margin: 0;
+  padding: 0;
 }
 #tell-us .budget-scroll .price {
   padding-left: 50px;
@@ -518,19 +562,27 @@ footer ul li {
   padding-left: 20px;
 }
 
-.range {
-  margin: 0;
-  padding: 0;
+.go-top {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin-right: 90px;
+  margin-bottom: 50px;
+  padding: 10px 30px;
+  border-radius: 10%;
+  font-weight: 700;
+}
+.go-top:hover {
+  background-color: rgba(16, 126, 255, 0.4392156863);
+}
+.go-top:active {
+  background-color: rgba(255, 200, 16, 0.4392156863);
+}
+.go-top img {
+  transform: rotate(-90deg);
+  margin: 20px 0;
 }
 
-@-webkit-keyframes left {
-  0% {
-    left: 0;
-  }
-}
-
-@keyframes left {
-  0% {
-    left: 0;
-  }
+.hide {
+  display: none;
 }/*# sourceMappingURL=main.css.map */
