--- a/main.scss
+++ b/main.scss
@@ -8,6 +8,12 @@ $fontSizeMain: 20px;
 
 $trans: all 0.5s ease-in-out;
 
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -69,6 +75,10 @@ h5 {
   letter-spacing: 2.4;
 }
 
+button {
+  background: none;
+}
+
 input {
   background: none;
   border: none;
@@ -97,36 +107,37 @@ section {
   margin-left: 280px;
 }
 
-header {
-  margin-top: 20px;
-  .top-header {
-    text-align: end;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    color: #ffc810;
-    padding: 25px 50px 30px 0;
-    margin: 0 -100px;
-    border-bottom: 1px solid #707070;
-    span {
-      color: #107eff;
-      font-weight: 400;
-      transition: $trans;
-    }
+.top-header {
+  text-align: end;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  color: #ffc810;
+  padding: 25px 50px 30px 0;
+  margin: 0 -100px;
+  border-bottom: 1px solid #707070;
+  span {
+    color: #107eff;
+    font-weight: 400;
     transition: $trans;
-    &:hover {
-      color: #107eff;
-      span {
-        color: #ffc810;
-      }
-    }
-    &:active {
-      padding-right: 60px;
+  }
+  transition: $trans;
+  &:hover {
+    color: #107eff;
+    span {
       color: #ffc810;
-      span {
-        color: #107eff;
-      }
     }
   }
+  &:active {
+    padding-right: 60px;
+    color: #ffc810;
+    span {
+      color: #107eff;
+    }
+  }
+}
+
+header {
+  margin-top: 20px;
   .hero {
     margin-top: 80px;
     margin-bottom: 50px;
@@ -158,6 +169,38 @@ header {
     display: flex;
     li:not(:last-child) {
       margin-right: 80px;
+    }
+  }
+}
+
+#fix-menu {
+  position: fixed;
+  width: max-content;
+  background-color: #000000;
+  border-bottom: 1px solid #242424;
+  z-index: 1;
+  .top-header {
+    border: none;
+  }
+  .menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 105px;
+    padding-right: 100px;
+    .logo-block {
+      display: flex;
+      align-items: center;
+      .logo {
+        padding-right: 30px;
+      }
+    }
+    ul {
+      display: flex;
+      margin-right: 20px;
+      li {
+        margin-right: 80px;
+      }
     }
   }
 }
@@ -214,7 +257,6 @@ header {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    background: none;
     color: #a0a0a0;
     transition: $trans;
     cursor: pointer;
@@ -335,8 +377,8 @@ header {
       align-items: center;
       height: 300px;
       width: 50px;
-      background: none;
       border: none;
+      transition: $trans;
       &:hover {
         background-color: #73b4ff30;
         filter: blur(1px);
@@ -398,8 +440,9 @@ header {
       width: 50%;
     }
     .range {
-      min-width: auto;
       min-width: 70%;
+      margin: 0;
+      padding: 0;
     }
     .price {
       padding-left: 50px;
@@ -525,13 +568,27 @@ footer {
   }
 }
 
-.range {
-  margin: 0;
-  padding: 0;
+.go-top {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin-right: 90px;
+  margin-bottom: 50px;
+  padding: 10px 30px;
+  border-radius: 10%;
+  font-weight: 700;
+  &:hover {
+    background-color: #107eff70;
+  }
+  &:active {
+    background-color: #ffc81070;
+  }
+  img {
+    transform: rotate(-90deg);
+    margin: 20px 0;
+  }
 }
 
-@keyframes left {
-  0% {
-    left: 0;
-  }
+.hide {
+  display: none;
 }
