--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,3 @@
-@import url("./css/input-range.css");
-
 $fontNova: "Proxima Nova", sans-serif;
 $fontMarcel: "Marcellus", sans-serif;
 $fontMerri: "Merriweather", sans-serif;
@@ -98,12 +96,12 @@ input {
   padding-top: 15px;
   min-width: 550px;
   outline: none;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   &[value] {
     font-weight: 700;
     font-size: 1.5rem;
   }
 }
+
 .tel[placeholder] {
   font-weight: 700;
   font-size: 1.5rem;
@@ -202,7 +200,8 @@ header {
   .container {
     padding: 0;
     margin: 0;
-    background: url("./img/bg/blue.png") no-repeat, url("./img/bg/yellow.png") no-repeat;
+    background: url("./img/bg/blue.png") no-repeat,
+      url("./img/bg/yellow.png") no-repeat;
     background-position: 164px -1115px, 414px -1008px;
     border-bottom: 1px solid #242424;
   }
@@ -461,17 +460,19 @@ header {
     :nth-child(n) {
       width: 50%;
     }
-    .range {
+    .range-slider {
       min-width: 70%;
       margin: 0;
       padding: 0;
     }
+
     .price {
-      padding-left: 50px;
+      padding-left: 35px;
       min-width: 100%;
       span,
       output {
         font-size: 1.5rem;
+        text-transform: uppercase;
       }
     }
   }
@@ -630,4 +631,56 @@ footer {
 
 .hide {
   display: none;
+}
+
+/*generated with Input range slider CSS style generator (version 20211225)
+https://toughengineer.github.io/demo/slider-styler*/
+input[type="range"].styled-slider {
+  -webkit-appearance: none;
+}
+
+input[type="range"].styled-slider.slider-progress {
+  --range: calc(var(--max) - var(--min));
+  --ratio: calc((var(--value) - var(--min)) / var(--range));
+  --sx: calc(0.5 * 20px + var(--ratio) * (100% - 20px));
+}
+
+input[type="range"].styled-slider:focus {
+  outline: none;
+}
+input[type="range"].styled-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+  background: #ffffff;
+  margin: -7.5px 0;
+}
+
+input[type="range"].styled-slider::-webkit-slider-runnable-track {
+  height: 4px;
+  background: #ffffff;
+}
+
+input[type="range"].styled-slider::-webkit-slider-thumb:hover {
+  background: #ffffff;
+}
+
+input[type="range"].styled-slider:hover::-webkit-slider-runnable-track {
+  background: #e5e5e5d6;
+  border-color: #ffffff;
+}
+
+input[type="range"].styled-slider::-webkit-slider-thumb:active {
+  background: #c0c0c0;
+}
+
+input[type="range"].styled-slider:active::-webkit-slider-runnable-track {
+  background: #e40000;
+  border-color: #ffffff;
+}
+
+input[type="range"].styled-slider.slider-progress::-webkit-slider-runnable-track {
+  background: linear-gradient(#ffffff, #ffffff) 0 / var(--sx) 100% no-repeat,
+    url("../img/bg/point.png") center;
 }
