--- a/main.css
+++ b/main.css
@@ -12,9 +12,21 @@
   font-size: 20px;
   color: #ffffff;
 }
+@media screen and (max-width: 1440px) {
+  * {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 770px) {
+  * {
+    font-size: 14px;
+  }
+}
 
 body {
   background-color: #000000;
+  overflow-x: hidden;
+  width: 100wh;
 }
 
 wrapper {
@@ -51,6 +63,7 @@ h2 {
   font-weight: 700;
   line-height: 1.3;
   letter-spacing: 2.5;
+  padding-right: 30px;
 }
 
 h3 {
@@ -74,6 +87,7 @@ h5 {
 
 button {
   background: none;
+  border: none;
 }
 
 input {
@@ -105,9 +119,28 @@ section {
   padding: 0 100px;
   border-top: 1px solid #707070;
 }
+@media screen and (max-width: 1100px) {
+  header,
+footer,
+section {
+    padding: 0 50px;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  header {
+    border: none;
+  }
+}
 
 .container {
   margin-left: 280px;
+}
+@media screen and (max-width: 1440px) {
+  .container {
+    margin-left: 0;
+  }
 }
 
 .top-header {
@@ -137,6 +170,11 @@ section {
 }
 .top-header:active span {
   color: #107eff;
+}
+@media screen and (max-width: 1100px) {
+  .top-header {
+    padding-right: 100px;
+  }
 }
 
 header {
@@ -175,13 +213,24 @@ header ul {
 header ul li:not(:last-child) {
   margin-right: 80px;
 }
+@media screen and (max-width: 1024px) {
+  header .hero {
+    margin-top: 30px;
+  }
+  header .container__hero {
+    margin-top: 50px;
+  }
+  header .container__hero .desc {
+    margin-bottom: 50px;
+  }
+}
 
 #fix-menu {
   position: fixed;
   max-width: 100%;
   padding-left: 100px;
   background-color: #000000;
-  z-index: 1;
+  z-index: 100;
 }
 #fix-menu .container {
   padding: 0;
@@ -213,6 +262,40 @@ header ul li:not(:last-child) {
 #fix-menu .menu ul li {
   margin-right: 80px;
 }
+@media screen and (max-width: 1920px) {
+  #fix-menu {
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+  }
+}
+@media screen and (max-width: 1440px) {
+  #fix-menu .container {
+    background: none;
+  }
+  #fix-menu .logo-block {
+    flex-direction: column;
+  }
+  #fix-menu .logo-block .logo {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 1100px) {
+  #fix-menu {
+    padding: 0;
+    margin: 0;
+    border-top: none;
+  }
+  #fix-menu .logo-block {
+    margin-left: 20px;
+  }
+  #fix-menu .top-header {
+    display: none;
+  }
+  #fix-menu .menu ul li {
+    margin-right: 30px;
+  }
+}
 
 #what-we-do li {
   display: flex;
@@ -230,9 +313,50 @@ header ul li:not(:last-child) {
   font-weight: 900;
   opacity: 0.5;
 }
+#what-we-do .text-block {
+  display: flex;
+}
 #what-we-do h3,
 #what-we-do h5 {
   width: 50%;
+}
+#what-we-do h3 {
+  padding-right: 30px;
+}
+#what-we-do h3:nth-child(2) {
+  padding-right: 130px;
+}
+@media screen and (max-width: 1640px) {
+  #what-we-do h3 {
+    padding-right: 10px !important;
+  }
+}
+@media screen and (max-width: 1490px) {
+  #what-we-do li {
+    padding-top: 30px;
+    padding-bottom: 50px;
+    height: auto;
+  }
+  #what-we-do .text-block {
+    flex-direction: column;
+  }
+  #what-we-do .text-block h3,
+#what-we-do .text-block h5 {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  #what-we-do {
+    padding-top: 0 !important;
+  }
+  #what-we-do .num {
+    min-width: 100px;
+  }
+}
+@media screen and (max-width: 770px) {
+  #what-we-do .num {
+    display: none;
+  }
 }
 
 #accordion {
@@ -288,7 +412,44 @@ header ul li:not(:last-child) {
   opacity: 0;
   transition: all 0.4s cubic-bezier(0, 0, 1, -0.32);
 }
-
+@media screen and (max-width: 1440px) {
+  #accordion {
+    height: 550px;
+  }
+  #accordion ul {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: -70px;
+  }
+  #accordion ul li {
+    padding-top: 50px;
+  }
+  #accordion .closed {
+    display: none;
+  }
+  #accordion .hide-block {
+    margin-top: 20px;
+    opacity: 1;
+    padding-left: 0;
+  }
+}
+@media screen and (max-width: 1140px) {
+  #accordion {
+    height: 640px;
+  }
+  #accordion ul li {
+    width: 325px;
+  }
+}
+@media screen and (max-width: 785px) and (min-width: 500px) {
+  #accordion {
+    height: 850px;
+  }
+  #accordion ul li {
+    margin: 0 10px;
+    width: 450px;
+  }
+}
 #about-us {
   padding-top: 130px;
   margin-bottom: 130px;
@@ -298,12 +459,13 @@ header ul li:not(:last-child) {
   align-items: center;
   justify-content: space-between;
   margin-top: 125px;
+  flex-wrap: wrap;
 }
 #about-us .card {
   position: relative;
 }
 #about-us .card .photo {
-  height: 560px;
+  height: 550px;
 }
 #about-us .card .photo img {
   -o-object-fit: none;
@@ -317,12 +479,45 @@ header ul li:not(:last-child) {
   bottom: 50px;
 }
 #about-us .card h4 {
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   margin-bottom: 15px;
 }
 #about-us .card h5 {
   letter-spacing: normal;
   font-size: 1rem;
+}
+@media screen and (max-width: 1920px) and (min-width: 1600px) {
+  #about-us .card .photo {
+    height: 440px;
+    background-position: center top !important;
+  }
+  #about-us .card .persona {
+    bottom: 20px;
+  }
+  #about-us .card .name {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 1600px) {
+  #about-us .photoes {
+    justify-content: space-around;
+  }
+  #about-us .card {
+    margin-bottom: 80px;
+  }
+  #about-us .card:nth-child(2) {
+    order: 1;
+  }
+}
+@media screen and (max-width: 1440px) {
+  #about-us .photoes {
+    margin-top: 50px;
+  }
+}
+@media screen and (max-width: 1100px) {
+  #about-us {
+    margin-bottom: 0;
+  }
 }
 
 #projects {
@@ -383,19 +578,48 @@ header ul li:not(:last-child) {
   width: 50px;
   border: none;
   transition: all 0.5s ease-in-out;
+  border-radius: 5px;
 }
 #projects .arrows .left:hover,
 #projects .arrows .right:hover {
-  background-color: rgba(115, 180, 255, 0.1882352941);
+  background-color: rgba(115, 180, 255, 0.2509803922);
   filter: blur(1px);
-  border-radius: 5px;
 }
 #projects .arrows .left:active,
 #projects .arrows .right:active {
-  background-color: rgba(255, 200, 16, 0.1882352941);
+  background-color: rgba(255, 200, 16, 0.2509803922);
 }
 #projects .arrows .none {
   visibility: hidden;
+}
+@media screen and (max-width: 1720px) {
+  #projects img {
+    width: 550px;
+  }
+  #projects .slider h4,
+#projects .slider h5 {
+    padding-left: 0;
+  }
+  #projects .slider .slide-zone {
+    margin-left: -407px;
+  }
+}
+@media screen and (max-width: 1500px) {
+  #projects .slider .slide-zone {
+    margin-left: -624px;
+  }
+}
+@media screen and (max-width: 770px) {
+  #projects img {
+    width: 320px;
+  }
+  #projects .arrows {
+    top: 25%;
+  }
+  #projects .arrows .left,
+#projects .arrows .right {
+    height: 50px;
+  }
 }
 
 #tell-us {
@@ -458,6 +682,7 @@ header ul li:not(:last-child) {
 #tell-us .budget-scroll .price output {
   font-size: 1.5rem;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 #tell-us .btn-send {
   max-width: -webkit-max-content;
@@ -477,6 +702,24 @@ header ul li:not(:last-child) {
 }
 #tell-us .btn-send:active {
   background: rgba(255, 255, 255, 0.062745098);
+}
+@media screen and (max-width: 1440px) {
+  #tell-us .bottom-section {
+    margin-left: 0;
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 1100px) {
+  #tell-us .bottom-section form {
+    margin-top: 80px;
+    margin-bottom: 100px;
+  }
+  #tell-us .btn-send {
+    margin-bottom: 100px;
+    padding: 20px 30%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 #contact {
@@ -526,6 +769,16 @@ header ul li:not(:last-child) {
   font-size: 1.5rem;
   padding-bottom: 15px;
   text-transform: uppercase;
+}
+@media screen and (max-width: 1440px) {
+  #contact .contacts {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 1100px) {
+  #contact .contacts {
+    margin-bottom: 50px;
+  }
 }
 
 footer {
@@ -591,6 +844,27 @@ footer ul li {
   max-height: -webkit-fit-content;
   max-height: -moz-fit-content;
   max-height: fit-content;
+}
+@media screen and (max-width: 1440px) {
+  .top-section {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .top-section {
+    margin-bottom: 30px !important;
+  }
+}
+@media screen and (max-width: 700px) {
+  .top-section {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .top-section h2,
+.top-section .text {
+    width: 100%;
+  }
 }
 
 .go-top {
@@ -669,4 +943,13 @@ input[type=range].styled-slider:active::-webkit-slider-runnable-track {
 
 input[type=range].styled-slider.slider-progress::-webkit-slider-runnable-track {
   background: linear-gradient(#ffffff, #ffffff) 0/var(--sx) 100% no-repeat, url("../img/bg/point.png") center;
+}
+
+@media screen and (max-width: 1440px) {
+  section {
+    padding-top: 80px !important;
+  }
+  #fix-menu {
+    padding-top: 0 !important;
+  }
 }/*# sourceMappingURL=main.css.map */
