--- a/main.scss
+++ b/main.scss
@@ -3,8 +3,12 @@ $fontMarcel: "Marcellus", sans-serif;
 $fontMerri: "Merriweather", sans-serif;
 
 $fontSizeMain: 20px;
+$fontSizeSecond: 16px;
+$fontSizeMobile: 14px;
 
 $trans: all 0.5s ease-in-out;
+
+$paddingLeft: 280px;
 
 @media (prefers-reduced-motion: no-preference) {
   :root {
@@ -20,10 +24,18 @@ $trans: all 0.5s ease-in-out;
   font-weight: 400;
   font-size: $fontSizeMain;
   color: #ffffff;
+  @media screen and (max-width: 1440px) {
+    font-size: $fontSizeSecond;
+  }
+  @media screen and (max-width: 770px) {
+    font-size: $fontSizeMobile;
+  }
 }
 
 body {
   background-color: #000000;
+  overflow-x: hidden;
+  width: 100wh;
 }
 
 wrapper {
@@ -63,6 +75,7 @@ h2 {
   font-weight: 700;
   line-height: 1.3;
   letter-spacing: 2.5;
+  padding-right: 30px;
 }
 
 h3 {
@@ -86,6 +99,7 @@ h5 {
 
 button {
   background: none;
+  border: none;
 }
 
 input {
@@ -116,13 +130,23 @@ section {
   margin: 0 35px;
   padding: 0 100px;
   border-top: 1px solid #707070;
+  @media screen and (max-width: 1100px) {
+    padding: 0 50px;
+    margin: 0;
+  }
 }
 
 header {
+  @media screen and (max-width: 1100px) {
+    border: none;
+  }
 }
 
 .container {
-  margin-left: 280px;
+  margin-left: $paddingLeft;
+  @media screen and (max-width: 1440px) {
+    margin-left: 0;
+  }
 }
 
 .top-header {
@@ -151,6 +175,9 @@ header {
     span {
       color: #107eff;
     }
+  }
+  @media screen and (max-width: 1100px) {
+    padding-right: 100px;
   }
 }
 
@@ -189,6 +216,17 @@ header {
       margin-right: 80px;
     }
   }
+  @media screen and (max-width: 1024px) {
+    .hero {
+      margin-top: 30px;
+    }
+    .container__hero {
+      margin-top: 50px;
+      .desc {
+        margin-bottom: 50px;
+      }
+    }
+  }
 }
 
 #fix-menu {
@@ -196,7 +234,7 @@ header {
   max-width: 100%;
   padding-left: 100px;
   background-color: #000000;
-  z-index: 1;
+  z-index: 100;
   .container {
     padding: 0;
     margin: 0;
@@ -228,6 +266,38 @@ header {
       }
     }
   }
+  @media screen and (max-width: 1920px) {
+    max-width: fit-content;
+  }
+  @media screen and (max-width: 1440px) {
+    .container {
+      background: none;
+    }
+    .logo-block {
+      flex-direction: column;
+      .logo {
+        margin-bottom: 20px;
+      }
+    }
+  }
+  @media screen and (max-width: 1100px) {
+    padding: 0;
+    margin: 0;
+    border-top: none;
+    .logo-block {
+      margin-left: 20px;
+    }
+    .top-header {
+      display: none;
+    }
+    .menu {
+      ul {
+        li {
+          margin-right: 30px;
+        }
+      }
+    }
+  }
 }
 
 #what-we-do {
@@ -240,7 +310,7 @@ header {
     height: 370px;
   }
   .num {
-    min-width: 280px;
+    min-width: $paddingLeft;
     font-size: 1.2rem;
     font-family: $fontMerri;
     font-style: italic;
@@ -248,9 +318,51 @@ header {
     opacity: 0.5;
   }
 
+  .text-block {
+    display: flex;
+  }
+
   h3,
   h5 {
     width: 50%;
+  }
+  h3 {
+    padding-right: 30px;
+    &:nth-child(2) {
+      padding-right: 130px;
+    }
+  }
+
+  @media screen and (max-width: 1640px) {
+    h3 {
+      padding-right: 10px !important;
+    }
+  }
+
+  @media screen and (max-width: 1490px) {
+    li {
+      padding-top: 30px;
+      padding-bottom: 50px;
+      height: auto;
+    }
+    .text-block {
+      flex-direction: column;
+      h3,
+      h5 {
+        width: 100%;
+      }
+    }
+  }
+  @media screen and (max-width: 1024px) {
+    padding-top: 0 !important;
+    .num {
+      min-width: 100px;
+    }
+  }
+  @media screen and (max-width: 770px) {
+    .num {
+      display: none;
+    }
   }
 }
 
@@ -308,6 +420,42 @@ header {
     opacity: 0;
     transition: all 0.4s cubic-bezier(0, 0, 1, -0.32);
   }
+  @media screen and (max-width: 1440px) {
+    height: 550px;
+    ul {
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: -70px;
+      li {
+        padding-top: 50px;
+      }
+    }
+    .closed {
+      display: none;
+    }
+    .hide-block {
+      margin-top: 20px;
+      opacity: 1;
+      padding-left: 0;
+    }
+  }
+  @media screen and (max-width: 1140px) {
+    height: 640px;
+    ul li {
+      width: 325px;
+    }
+  }
+
+  @media screen and (max-width: 785px) and (min-width: 500px) {
+    height: 850px;
+    ul li {
+      margin: 0 10px;
+      width: 450px;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+  }
 }
 
 #about-us {
@@ -318,11 +466,12 @@ header {
     align-items: center;
     justify-content: space-between;
     margin-top: 125px;
+    flex-wrap: wrap;
   }
   .card {
     position: relative;
     .photo {
-      height: 560px;
+      height: 550px;
       img {
         object-fit: none;
         object-position: 50% 100%; // or 50% 50%
@@ -334,13 +483,48 @@ header {
       bottom: 50px;
     }
     h4 {
-      letter-spacing: 3px;
+      letter-spacing: 2px;
       margin-bottom: 15px;
     }
     h5 {
       letter-spacing: normal;
       font-size: 1rem;
     }
+  }
+  @media screen and (max-width: 1920px) and (min-width: 1600px) {
+    .card {
+      .photo {
+        height: 440px;
+        background-position: center top !important;
+      }
+      .persona {
+        bottom: 20px;
+      }
+      .name {
+        font-size: 1.5rem;
+      }
+    }
+  }
+
+  @media screen and (max-width: 1600px) {
+    .photoes {
+      justify-content: space-around;
+    }
+    .card {
+      margin-bottom: 80px;
+      &:nth-child(2) {
+        order: 1;
+      }
+    }
+  }
+
+  @media screen and (max-width: 1440px) {
+    .photoes {
+      margin-top: 50px;
+    }
+  }
+  @media screen and (max-width: 1100px) {
+    margin-bottom: 0;
   }
 }
 
@@ -400,17 +584,52 @@ header {
       width: 50px;
       border: none;
       transition: $trans;
+      border-radius: 5px;
       &:hover {
-        background-color: #73b4ff30;
+        background-color: #73b4ff40;
         filter: blur(1px);
-        border-radius: 5px;
       }
       &:active {
-        background-color: #ffc81030;
+        background-color: #ffc81040;
       }
     }
     .none {
       visibility: hidden;
+    }
+  }
+  @media screen and (max-width: 1720px) {
+    .photo {
+    }
+    img {
+      width: 550px;
+    }
+    .slider {
+      h4,
+      h5 {
+        padding-left: 0;
+      }
+      .slide-zone {
+        margin-left: -407px;
+      }
+    }
+  }
+  @media screen and (max-width: 1500px) {
+    .slider {
+      .slide-zone {
+        margin-left: -624px;
+      }
+    }
+  }
+  @media screen and (max-width: 770px) {
+    img {
+      width: 320px;
+    }
+    .arrows {
+      top:25%;
+      .left,
+      .right {
+        height: 50px;
+      }
     }
   }
 }
@@ -421,7 +640,7 @@ header {
     margin-bottom: 110px;
   }
   .bottom-section {
-    margin-left: 280px;
+    margin-left: $paddingLeft;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
@@ -473,6 +692,7 @@ header {
       output {
         font-size: 1.5rem;
         text-transform: uppercase;
+        white-space: nowrap;
       }
     }
   }
@@ -493,6 +713,26 @@ header {
       background: #ffffff10;
     }
   }
+  @media screen and (max-width: 1440px) {
+    .bottom-section {
+      margin-left: 0;
+      justify-content: space-between;
+    }
+  }
+  @media screen and (max-width: 1100px) {
+    .bottom-section {
+      form {
+        margin-top: 80px;
+        margin-bottom: 100px;
+      }
+    }
+    .btn-send {
+      margin-bottom: 100px;
+      padding: 20px 30%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
 
 #contact {
@@ -505,7 +745,7 @@ header {
   }
   .contacts {
     display: flex;
-    margin-left: 280px;
+    margin-left: $paddingLeft;
     margin-bottom: 150px;
     flex-wrap: wrap;
     .main {
@@ -523,7 +763,6 @@ header {
       }
       .icon {
         display: flex;
-        // align-items: center;
         img {
           margin-right: 30px;
           transition: $trans;
@@ -541,6 +780,16 @@ header {
       font-size: 1.5rem;
       padding-bottom: 15px;
       text-transform: uppercase;
+    }
+  }
+  @media screen and (max-width: 1440px) {
+    .contacts {
+      margin-left: 0;
+    }
+  }
+  @media screen and (max-width: 1100px) {
+    .contacts {
+      margin-bottom: 50px;
     }
   }
 }
@@ -569,7 +818,7 @@ footer {
 
 .top-section {
   display: flex;
-  margin-left: 280px;
+  margin-left: $paddingLeft;
   flex-wrap: wrap;
 
   h2,
@@ -604,6 +853,22 @@ footer {
     visibility: visible;
     transition: $trans;
     max-height: fit-content;
+  }
+
+  @media screen and (max-width: 1440px) {
+    margin-left: 0;
+  }
+  @media screen and (max-width: 1100px) {
+    margin-bottom: 30px !important;
+  }
+  @media screen and (max-width: 700px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h2,
+    .text {
+      width: 100%;
+    }
   }
 }
 
@@ -683,4 +948,16 @@ input[type="range"].styled-slider:active::-webkit-slider-runnable-track {
 input[type="range"].styled-slider.slider-progress::-webkit-slider-runnable-track {
   background: linear-gradient(#ffffff, #ffffff) 0 / var(--sx) 100% no-repeat,
     url("../img/bg/point.png") center;
+}
+
+@media screen and (max-width: 1440px) {
+  section {
+    padding-top: 80px !important;
+  }
+  #fix-menu {
+    padding-top: 0 !important;
+  }
+}
+
+@media screen and (max-width: 0) {
 }
