--- a/main.css
+++ b/main.css
@@ -133,6 +133,21 @@ section {
     border: none;
   }
 }
+@media screen and (max-width: 700px) {
+  header .top-header {
+    padding: 10px 0;
+    margin: 0;
+    text-align: center;
+  }
+  header .dir-logo img {
+    width: 30%;
+  }
+}
+@media screen and (max-width: 400px) {
+  header {
+    padding: 10px;
+  }
+}
 
 .container {
   margin-left: 280px;
@@ -224,6 +239,17 @@ header ul li:not(:last-child) {
     margin-bottom: 50px;
   }
 }
+@media screen and (max-width: 700px) {
+  header .container__hero h2 {
+    font-size: 2.5rem;
+  }
+  header .botom-hero {
+    align-items: center;
+  }
+  header .botom-hero h2 {
+    font-size: 1.5rem;
+  }
+}
 
 #fix-menu {
   position: fixed;
@@ -296,6 +322,17 @@ header ul li:not(:last-child) {
     margin-right: 30px;
   }
 }
+@media screen and (max-width: 700px) {
+  #fix-menu .logo-block {
+    margin-left: 50px;
+  }
+  #fix-menu .logo-block .logo img {
+    width: 100px;
+  }
+  #fix-menu .logo-block div img {
+    width: 50px;
+  }
+}
 
 #what-we-do li {
   display: flex;
@@ -357,8 +394,11 @@ header ul li:not(:last-child) {
   #what-we-do .num {
     display: none;
   }
+  #what-we-do li {
+    margin: 0;
+    padding: 0;
+  }
 }
-
 #accordion {
   height: 360px;
   width: 800px;
@@ -450,6 +490,16 @@ header ul li:not(:last-child) {
     width: 450px;
   }
 }
+@media screen and (max-width: 500px) {
+  #accordion {
+    height: 904px;
+  }
+  #accordion ul li {
+    width: 300px;
+    margin: 0;
+  }
+}
+
 #about-us {
   padding-top: 130px;
   margin-bottom: 130px;
@@ -517,6 +567,18 @@ header ul li:not(:last-child) {
 @media screen and (max-width: 1100px) {
   #about-us {
     margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 700px) {
+  #about-us .card .photo {
+    height: 440px;
+    background-position: center top !important;
+  }
+  #about-us .card .persona {
+    bottom: 20px;
+  }
+  #about-us .card .name {
+    font-size: 1.5rem;
   }
 }
 
@@ -721,6 +783,25 @@ header ul li:not(:last-child) {
     margin-right: auto;
   }
 }
+@media screen and (max-width: 700px) {
+  #tell-us .bottom-section form {
+    margin-bottom: 0;
+    margin-top: 30px;
+  }
+  #tell-us .bottom-section :nth-child(n) {
+    width: 100%;
+  }
+  #tell-us .bottom-section :nth-child(4) {
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+  #tell-us .bottom-section .budget-scroll {
+    flex-direction: column;
+  }
+  #tell-us .bottom-section .budget-scroll .price {
+    padding: 30px 0;
+  }
+}
 
 #contact {
   padding-top: 160px;
@@ -888,6 +969,17 @@ footer ul li {
   transform: rotate(-90deg);
   margin: 20px 0;
 }
+@media screen and (max-width: 1100px) {
+  .go-top {
+    margin: 30px 50px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .go-top {
+    margin: 10px 30px;
+    padding: 5px 10px;
+  }
+}
 
 .hide {
   display: none;
@@ -951,5 +1043,10 @@ input[type=range].styled-slider.slider-progress::-webkit-slider-runnable-track {
   }
   #fix-menu {
     padding-top: 0 !important;
+  }
+}
+@media screen and (max-width: 380px) {
+  header {
+    margin-top: 0;
   }
 }/*# sourceMappingURL=main.css.map */
