--- a/main.scss
+++ b/main.scss
@@ -415,6 +415,10 @@ header {
     }
   }
   @media screen and (max-width: 400px) {
+    padding: 0 20px;
+    li:last-child{
+        border-bottom: none;
+    }
   }
 }
 
@@ -601,7 +605,8 @@ header {
     .card {
 
     .photo{
-      height: 300px;
+      height: 275px;
+      background-position: center 10%!important;
     }
   }}
 }
